--- a/src/components/controls/Controls.scss
+++ b/src/components/controls/Controls.scss
@@ -1,11 +1,25 @@
-.controls {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  max-width: 300px;
-  padding: var(--p-3) 0 var(--p-1) 0;
+@mixin bp-xs {
+  @media screen and (min-width: var(--break-point-xs)) {
+    @content;
+  }
 }
 
-.controls > * {
-  margin-right: var(--p-1);
+.control-container {
+  width: 100%;
+  background: var(--color-secondary-100);
+  padding: var(--s-3) var(--s-3);
+  border-bottom-left-radius: var(--rad-24);
+  border-bottom-right-radius: var(--rad-24);
+}
+
+.controls-button-group {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  & > :first-child {
+    margin-right: 0px;
+  }
+  & > button {
+    width: 40%;
+  }
 }
