--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -1,38 +1,120 @@
 :root {
   /* Spacing */
-  --p-1: 8px;
-  --p-2: calc(var(--p-1) * 2);
-  --p-3: calc(var(--p-1) * 3);
-  --p-4: calc(var(--p-1) * 4);
-  --p-5: calc(var(--p-1) * 5);
+  --s-1: 8px;
+  --s-2: 16px;
+  --s-3: 24px;
+  --s-4: 32px;
+  --s-5: 40px;
+  --s-6: 48px;
+  --s-7: 56px;
+  --s-8: 64px;
+  --s-10: 80px;
+  --s-12: 96px;
+  --s-14: 112px;
+  --s-16: 128px;
 
   /* Radius */
-  --rad-1: 4px;
-  --rad-2: calc(var(--rad-1) * 2);
+  --rad-4: 4px;
+  --rad-8: 8px;
+  --rad-16: 16px;
+  --rad-24: 24px;
+  --rad-32: 32px;
 
   /* Typography */
   --ff: "Inter", sans-serif;
   --ff-mono: "Roboto Mono", monospace;
 
-  --fs-small: 1em;
-  --fs-medium: 1.2em;
-  --fs-large: 2em;
+  // Adapted From Major Third Type Scale
+  --fs-h1: 3.815rem;
+  --fs-h2: 3.052rem;
+  --fs-h3: 2.441rem;
+  --fs-h4: 1.953rem;
+  --fs-h5: 1.563rem;
+  --fs-h6: 1.125rem;
+  --fs-body: 1rem;
+  --fs-small: 0.8rem;
+
+  --fs-headline-small-screen: var(--fs-h2);
+  --fs-headline-medium-screen: var(--fs-h1);
+  --fs-headline-large-screen: var(--fs-h1);
+
+  --fs-subheadline-small-screen: var(--fs-h6);
+  --fs-subheadline-medium-screen: var(--fs-h5);
+  --fs-subheadline-large-screen: var(--fs-h4);
+
+  --fs-clock: var(--fs-h1);
+  --fs-button: var(--fs-body);
 
   --lh-default: 1.4em;
+  --lh-body: 1.2em;
 
   --fw-medium: 500;
   --fw-bold: 700;
 
-  /* Specialty */
-  --border-dark-thick: 4px solid black;
-  --border-dark-medium: 2px solid black;
-  --shadow: rgba(0, 0, 0, 0.12) 0px 8px 30px 0px;
-  --purple: rgb(128, 0, 128);
-}
+  --break-point-xs: 370px;
+  --break-point-small: 480px;
+  --break-point-medium: 840px;
+  --break-point-large: 960px;
+  --break-point-xl: 1440px;
 
-@media screen and (max-width: 375px) {
-  :root {
-    --p-4: var(--p-3);
-    --p-3: var(--p-2);
+  @mixin bp-medium-only {
+    @media screen and (min-width: calc(var(--break-point-small))) and (max-width: calc(var(--break-point-medium) - 1)) {
+      @content;
+    }
   }
+
+  @mixin bp-xs {
+    @media screen and (min-width: calc(var(--break-point-xs))) {
+      @content;
+    }
+  }
+
+  @mixin bp-medium {
+    @media screen and (min-width: calc(var(--break-point-medium))) {
+      @content;
+    }
+  }
+
+  @mixin bp-large-only {
+    @media screen and (min-width: calc(var(--break-point-medium))) and (max-width: calc(var(--break-point-large) - 1)) {
+      @content;
+    }
+  }
+
+  @mixin bp-large {
+    @media screen and (min-width: calc(var(--break-point-medium))) {
+      @content;
+    }
+  }
+
+  @mixin bp-xl {
+    @media screen and (min-width: calc(var(--break-point-xl))) {
+      @content;
+    }
+  }
+
+  // Colors
+  --color-primary-100: #eceefe;
+  --color-primary-200: #ddd7fc;
+  --color-primary-300: #9a8ce8;
+  --color-primary-400: #7865e0;
+  --color-primary-500: #563fd8;
+  --color-primary-600: #4532ad;
+  --color-primary-700: #342682;
+
+  --color-secondary-100: #f4fafd;
+
+  --color-text-default: #282e31;
+
+  --color-accent-green-100: #e8f6ee;
+  --color-accent-orange-100: #fff8eb;
+  --color-accent-yellow-200: #feffb3;
+
+  /* Specialty */
+  --filter-blur-heavy: 560px;
+  --filter-blur-light: 24px;
+  --shadow-light: 0px 0px 1px rgba(48, 49, 51, 0.05),
+    0px 2px 4px rgba(48, 49, 51, 0.1);
+  --shadow-medium: 0px 0px 1px rgba(48, 49, 51, 0.05),
+    0px 8px 16px rgba(48, 49, 51, 0.1);
 }
