--- a/src/components/stopwatch/Stopwatch.scss
+++ b/src/components/stopwatch/Stopwatch.scss
@@ -1,10 +1,10 @@
 .stopwatch {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  min-width: 297px; /* For the ~Aesthetics~ */
-  max-width: 450px;
+  background: white;
   border-radius: var(--rad-24);
   box-shadow: var(--shadow-medium);
-  background: white;
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  min-width: 297px; /* For the ~Aesthetic~ */
 }
