--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,7 @@
+@import "styles/mixins.scss";
+
 .main-content {
-  padding-top: var(--s-14);
+  align-items: center;
   display: flex;
   justify-content: center;
   & > * {
@@ -8,25 +10,37 @@
 }
 
 .heading-content {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
+  padding-bottom: var(--s-2);
 }
 
 .home-page {
-  position: relative;
-  padding: var(--s-14) var(--s-4) var(--s-4) var(--s-4);
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 0 auto;
+  max-width: var(--break-point-xl);
+  min-height: 100vh;
+  padding: var(--s-4) var(--s-4) var(--s-4) var(--s-4);
+  position: relative;
+  width: 100%;
+  @include respond-to("small") {
+    justify-content: space-evenly;
+  }
+  @include respond-to("medium") {
+    flex-direction: row;
+  }
 }
 
 .page-bg-blur {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 75%;
   background: var(--color-accent-green-100);
-  filter: blur(450px);
+  filter: blur(200px);
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
   z-index: -1;
 }
