--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -3,6 +3,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url(https://fonts.gstatic.com/s/inter/v7/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuI6fAZ9hiA.woff2)
     format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -15,6 +16,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url(https://fonts.gstatic.com/s/inter/v7/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuFuYAZ9hiA.woff2)
     format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -27,6 +29,7 @@
   font-family: "Roboto Mono";
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url(https://fonts.gstatic.com/s/robotomono/v13/L0xuDF4xlVMF-BfR8bXMIhJHg45mwgGEFl0_7Pq_ROW4.woff2)
     format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
