--- a/src/components/stopwatch/Stopwatch.scss
+++ b/src/components/stopwatch/Stopwatch.scss
@@ -2,7 +2,7 @@
   align-items: center;
   background: white;
   border-radius: var(--rad-24);
-  box-shadow: var(--shadow-medium);
+  box-shadow: var(--shadow-large);
   display: flex;
   flex-direction: column;
   max-width: 450px;
