shorten property names

--- a/src/components/controls/Controls.scss
+++ b/src/components/controls/Controls.scss
@@ -1,7 +1,7 @@
 .control-container {
-  background: var(--color-secondary-100);
-  border-radius: 0 0 var(--rad-24) var(--rad-24);
-  padding: var(--s-3) var(--s-3);
+  background: var(--secondary-1);
+  border-radius: 0 0 var(--radius-24) var(--radius-24);
+  padding: var(--spacing-3) var(--spacing-3);
   width: 100%;
 }
 
