--- a/src/components/stopwatch/Stopwatch.scss
+++ b/src/components/stopwatch/Stopwatch.scss
@@ -1,8 +1,8 @@
 .stopwatch {
   align-items: center;
   background: white;
-  border-radius: var(--rad-24);
-  box-shadow: var(--shadow-large);
+  border-radius: var(--radius-24);
+  box-shadow: var(--shadow-4);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
