--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -13,7 +13,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  padding: 0 var(--s-2) var(--s-2) 0;
+  padding: 0 var(--spacing-2) 0 0;
   user-select: none;
 }
 
@@ -24,7 +24,7 @@
   margin: 0 auto;
   min-height: 100vh;
   min-width: 328px;
-  padding: var(--s-4) var(--s-4) var(--s-4) var(--s-4);
+  padding: var(--spacing-4);
   position: relative;
   width: 100%;
   @include respond-to("small") {
@@ -36,7 +36,7 @@
 }
 
 .page-bg-blur {
-  background: var(--color-accent-yellow-100);
+  background: var(--yellow-1);
   height: 100%;
   opacity: 0.6;
   position: absolute;
