--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,9 +1,9 @@
 $breakpoints: (
-  "xs": 370px,
-  "small": 480px,
-  "medium": 840px,
-  "large": 960px,
-  "xl": 1440px,
+  'xs': 370px,
+  'small': 480px,
+  'medium': 840px,
+  'large': 960px,
+  'xl': 1440px,
 );
 
 /**
