--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./properties.scss";
-@import "./reset.scss";
-@import "./fonts.scss";
-@import "./utilities.scss";
+@import './properties.scss';
+@import './reset.scss';
+@import './fonts.scss';
+@import './utilities.scss';
