--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -21,8 +21,8 @@
   --radius-32: 32px;
 
   /* Typography */
-  --ff: "Inter", sans-serif;
-  --ff-mono: "Azeret Mono", monospace;
+  --ff: 'Inter', sans-serif;
+  --ff-mono: 'Azeret Mono', monospace;
 
   // Adapted From Major Third Type Scale
   --fs-h1: 3.815rem;
