--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -85,7 +85,7 @@
   --grey-6: #757575;
   --grey-8: #424242;
 
-  /* Specialty */
+  /* Effects */
   --filter-blur-xs: 24px;
   --filter-blur-l: 192px;
   --filter-blur-xl: 432px;
