--- a/src/components/digit/Digit.scss
+++ b/src/components/digit/Digit.scss
@@ -1,6 +1,7 @@
 .digit {
   display: inline-block;
   font-family: var(--ff-mono);
+  font-weight: var(--fw-bold);
   font-kerning: none;
   letter-spacing: 0ch;
   line-height: 0;
@@ -8,11 +9,18 @@
   will-change: opacity, transform;
 }
 
-.animate-digit {
-  animation: 250ms animate-digit-entrance ease-in;
+@media (prefers-reduced-motion: reduce) {
+  .animate-digit {
+    animation: 250ms animate-digit-entrance-with-no-motion ease-in;
+  }
+}
+@media (prefers-reduced-motion: no-preference) {
+  .animate-digit {
+    animation: 250ms animate-digit-entrance-with-motion ease-in;
+  }
 }
 
-@keyframes animate-digit-entrance {
+@keyframes animate-digit-entrance-with-motion {
   0% {
     transform: translate(0px, calc(-1 * var(--spacing-5)));
     opacity: 0;
@@ -23,6 +31,18 @@
   }
   100% {
     transform: translate(0px, 0px);
+    opacity: 1;
+  }
+}
+
+@keyframes animate-digit-entrance-with-no-motion {
+  0% {
+    opacity: 0.6;
+  }
+  70% {
+    opacity: 0.8;
+  }
+  100% {
     opacity: 1;
   }
 }
