--- a/src/components/greeting/Greeting.scss
+++ b/src/components/greeting/Greeting.scss
@@ -3,10 +3,9 @@
 .headline {
   color: var(--text-color);
   font-family: var(--ff);
-  font-weight: var(--fw-bold);
   font-size: var(--fs-h3);
   line-height: var(--lh-default);
-  padding-bottom: var(--spacing-1);
+  padding: 0 0 var(--spacing-1);
   @include respond-to('medium') {
     font-size: var(--fs-headline-medium-screen);
   }
@@ -25,7 +24,6 @@
 .subheadline {
   font-size: var(--fs-subheadline-small-screen);
   font-family: var(--ff);
-  font-weight: var(--fw-bold);
   line-height: var(--lh-default);
   margin-bottom: var(--spacing-1);
   @include respond-to('medium') {
