--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,20 +2,23 @@
 
 .main-content {
   display: grid;
-  place-content: center;;
+  place-content: center;
 }
 
 .heading-content {
   display: grid;
-  place-content: center;;
-  padding: 0 var(--spacing-2) 0 0;
+  place-content: center;
+  padding: var(--spacing-5) 0 var(--spacing-2) 0;
+  @include respond-to('medium') {
+    padding: 0 var(--spacing-2) 0 0;
+  }
 }
 
 .home-page {
-  background: var(--yellow-1);
+  background: var(--bg-color);
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
   justify-content: space-between;
   min-width: map-get($breakpoints, 'xs');
   padding: var(--spacing-4);
