--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -1,17 +1,18 @@
 :root {
   /* Spacing */
   --spacing-1: 8px;
-  --spacing-2: 16px;
-  --spacing-3: 24px;
-  --spacing-4: 32px;
-  --spacing-5: 40px;
-  --spacing-6: 48px;
-  --spacing-7: 56px;
-  --spacing-8: 64px;
+  --spacing-2: 12px;
+  --spacing-3: 16px;
+  --spacing-4: 24px;
+  --spacing-5: 32px;
+  --spacing-6: 40px;
+  --spacing-7: 48px;
+  --spacing-8: 56px;
+  --spacing-9: 64px;
   --spacing-10: 80px;
-  --spacing-12: 96px;
-  --spacing-14: 112px;
-  --spacing-16: 128px;
+  --spacing-11: 96px;
+  --spacing-12: 112px;
+  --spacing-13: 128px;
 
   /* Radius */
   --radius-4: 4px;
@@ -52,6 +53,7 @@
   --fw-medium: 500;
   --fw-bold: 700;
 
+  // Responsive
   --break-point-xs: 370px;
   --break-point-small: 480px;
   --break-point-medium: 840px;
@@ -59,45 +61,32 @@
   --break-point-xl: 1440px;
 
   // Colors
-  --primary-1: #eceefe;
-  --primary-2: #ddd7fc;
-  --primary-3: #9a8ce8;
-  --primary-4: #7865e0;
-  --primary-5: #563fd8;
-  --primary-6: #4532ad;
-  --primary-7: #342682;
+  --primary-1: #e4e5f1;
+  --primary-2: #cacce2;
+  --primary-3: #a2a5cc;
+  --primary-4: #7b80b7;
+  --primary-5: #6b60a8;
+  --primary-6: #51468c;
+  --primary-7: #39335c;
+  --primary-8: #32355c;
 
-  --secondary-1: #f4fafd;
-
-  --text-color: #282e31;
-
-  --green-100: #e8f6ee;
-  --green-300: #a3ddbc;
-
-  --orange-100: #fff8eb;
-  --orange-300: #ffe4af;
-
-  --yellow-1: #fafae4;
-  --yellow-3: #feffb3;
-
+  --grey-1: #fcfcfd;
+  --grey-2: #fafaf9;
   --grey-3: #e0e0e0;
   --grey-4: #bdbdbd;
   --grey-6: #757575;
   --grey-8: #424242;
 
-  /* Effects */
-  --filter-blur-xs: 24px;
-  --filter-blur-l: 192px;
-  --filter-blur-xl: 432px;
+  --text-color: #282e31;
+  --bg-color: #e7eaf736;
 
-  --shadow-1: 0px 1px 3px 0px rgba(48, 49, 51, 0.1),
-    0px 0px 1px 0px rgba(48, 49, 51, 0.05);
-  --shadow-2: 0px 0px 1px rgba(48, 49, 51, 0.05),
-    0px 2px 4px rgba(48, 49, 51, 0.1);
-  --shadow-3: 0px 0px 1px rgba(48, 49, 51, 0.05),
-    0px 8px 16px rgba(48, 49, 51, 0.1);
-  --shadow-4: 0px 8px 16px 0px rgba(86, 63, 216, 0.1),
-    0px 0px 1px 0px rgba(86, 63, 216, 0.05);
-  --shadow-5: 0px 16px 24px 0px rgba(86, 63, 216, 0.1),
-    0px 0px 1px 0px rgba(86, 63, 216, 0.05);
+  /* Effects */
+  --shadow-1: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+  --shadow-2: 0px 4px 8px -2px rgba(16, 24, 40, 0.1),
+    0px 2px 4px -2px rgba(16, 24, 40, 0.06);
+  --shadow-3: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
+    0px 8px 8px -4px rgba(16, 24, 40, 0.03);
+  --shadow-4: 0px 24px 48px -12px rgba(16, 24, 40, 0.18);
+  --shadow-5: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
 }
