--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,6 @@
 @import 'styles/mixins.scss';
 
-.main-content {
+.clock-content {
   display: grid;
   place-content: center;
 }
@@ -15,18 +15,26 @@
 }
 
 .home-page {
-  background: var(--bg-color);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
   justify-content: space-between;
-  min-width: map-get($breakpoints, 'xs');
   padding: var(--spacing-4);
   position: relative;
   @include respond-to('small') {
     justify-content: space-evenly;
-  }
-  @include respond-to('medium') {
     flex-direction: row;
   }
+}
+
+.background {
+  background: var(--bg-color);
+  height: 100%;
+  left: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  position: fixed;
+  top: 0;
+  opacity: 0.25;
+  z-index: -1;
 }
