--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -19,6 +19,8 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1048px;
   padding: var(--spacing-4);
   position: relative;
   @include respond-to('small') {
