--- a/src/components/clock/Clock.scss
+++ b/src/components/clock/Clock.scss
@@ -4,6 +4,7 @@
   align-items: center;
   display: flex;
   font-size: var(--fs-clock);
+  font-weight: var(--fw-bold);
   height: 100%;
   justify-content: center;
 }
