refactor(update csp and add new font)

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -5,7 +5,7 @@
 }
 
 @font-face {
-  font-family: 'Azeret Mono';
+  font-family: 'Courier Prime';
   font-display: swap;
-  src: url('../assets/AzeretMono.woff2') format('woff2');
+  src: url('../assets/CourierPrime.woff2') format('woff2');
 }
