--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -23,7 +23,7 @@
 
   /* Typography */
   --ff: 'Inter', sans-serif;
-  --ff-mono: 'Courier Prime', monospace;
+  --ff-mono: 'Azeret Mono', monospace;
 
   // Adapted From Major Third Type Scale
   --fs-h1: 3.815rem;
