remove unused properties

--- a/src/components/stopwatch/Stopwatch.scss
+++ b/src/components/stopwatch/Stopwatch.scss
@@ -2,7 +2,7 @@
   align-items: center;
   background: white;
   border-radius: var(--radius-16);
-  box-shadow: var(--shadow-2);
+  box-shadow: var(--shadow);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
