--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -10,7 +10,7 @@
   font-weight: var(--fw-bold);
   padding: var(--spacing-2) var(--spacing-3);
   text-transform: capitalize;
-  transition: background-color 150ms ease-in, box-shadow 150ms ease-in;
+  transition: background-color 150ms ease-in;
   user-select: none;
   &:hover {
     background-color: var(--primary-6);
@@ -22,7 +22,6 @@
   // https://bugzilla.mozilla.org/show_bug.cgi?id=68851\
   &:active {
     background-color: var(--primary-7);
-    box-shadow: none;
   }
   &:focus {
     outline: 2px dashed var(--primary-5);
@@ -44,7 +43,6 @@
   &:active {
     background-color: var(--primary-2);
     border: 1px solid var(--primary-5);
-    box-shadow: none;
     color: var(--primary-7);
   }
 }
