--- a/src/styles/properties.scss
+++ b/src/styles/properties.scss
@@ -6,20 +6,10 @@
   --spacing-4: 24px;
   --spacing-5: 32px;
   --spacing-6: 40px;
-  --spacing-7: 48px;
-  --spacing-8: 56px;
-  --spacing-9: 64px;
-  --spacing-10: 80px;
-  --spacing-11: 96px;
-  --spacing-12: 112px;
-  --spacing-13: 128px;
 
   /* Radius */
-  --radius-4: 4px;
   --radius-8: 8px;
   --radius-16: 16px;
-  --radius-24: 24px;
-  --radius-32: 32px;
 
   /* Typography */
   --ff: 'Inter', sans-serif;
@@ -81,12 +71,6 @@
   --bg-color: #e7eaf7;
 
   /* Effects */
-  --shadow-1: 0px 1px 3px rgba(16, 24, 40, 0.1),
-    0px 1px 2px rgba(16, 24, 40, 0.06);
-  --shadow-2: 0px 4px 8px -2px rgba(16, 24, 40, 0.1),
+  --shadow: 0px 4px 8px -2px rgba(16, 24, 40, 0.1),
     0px 2px 4px -2px rgba(16, 24, 40, 0.06);
-  --shadow-3: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
-    0px 8px 8px -4px rgba(16, 24, 40, 0.03);
-  --shadow-4: 0px 24px 48px -12px rgba(16, 24, 40, 0.18);
-  --shadow-5: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
 }
